[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]

# [build-system]
# requires = ["scikit-build-core>=0.3.3"] 
# build-backend = "scikit_build_core.build"
# build-backend = "setuptools.build_meta"

[project]
name = "scdemon"
version = "0.0.4"
description = "Single cell decomposition into module networks"
authors = [{name = "Benjamin James", email = "benjames@mit.edu"},
           {name = "Carles Boix", email = "cboix@mit.edu"}]
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "numpy", "pandas",
    "scipy", "tqdm",
    "igraph", "umap-learn",
    "leidenalg", "scikit-learn",
    # Added from original modules, can prune:
    "scanpy", "anndata",
    "seaborn", "matplotlib",
    "igraph", "numba"
]

[project.urls]
Documentation = "https://scdemon.readthedocs.io/"
Source = "https://github.com/kellislab/scdemon"
Home-page = "https://github.com/kellislab/scdemon"

[project.optional-dependencies]
test = ["adjustText", "gprofiler-official"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.setuptools]
packages = ["scdemon", 
         "scdemon.utils", "scdemon.plotting",
         "scdemon.graph", "scdemon.data"]

[tool.coverage.run]
branch = true

